# weaviate-creative-writing-assistant

./: .cursorrules  .env.example  .gitignore  Project.md  pyproject.toml
src/: creative_ideas.json  main.py  models.py  settings.py
